# datafusion-performance

./: .gitignore  README.md
pems_sorted/station=402260/: part-r-00071-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00073-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00076-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00083-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00084-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00086-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00088-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00091-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00095-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00097-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00099-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00101-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00103-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00104-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00106-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00107-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00110-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00111-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  part-r-00112-ddaee723-f3f6-4f25-a34b-3312172aa6d7.snappy.parquet  (+120 more)
python/: README.md  main.py  requirements.txt  run_test.sh
rust/: Cargo.toml  README.md  run_test.sh
rust/src/: main.rs
(+784 files in other folders)
